<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pilgrim_lidar_noise</name>
  <version>0.1.0</version>
  <description>Rover ROS 2 LiDAR noise injection simulation.</description>
  <maintainer email="sammy.l.tribble@gmail.com">freeman</maintainer>
  <license>MIT</license>

  <exec_depend>ament_copyright</exec_depend>
  <exec_depend>ament_flake8</exec_depend>
  <exec_depend>ament_pep257</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
